--- a/Heart-up/Base.lproj/Main.storyboard
+++ b/Heart-up/Base.lproj/Main.storyboard
@@ -42,7 +42,6 @@
                     </navigationItem>
                     <connections>
                         <outlet property="mapView" destination="rNy-YI-eZf" id="MzV-Ei-Wzt"/>
-                        <segue destination="R6z-YI-9wq" kind="push" identifier="toSelectUserSegue" id="211-cK-41G"/>
                         <segue destination="9Ng-XU-Eez" kind="push" identifier="detailViewControllerSegue" id="HIM-L7-JbM"/>
                     </connections>
                 </viewController>
@@ -751,6 +750,6 @@
         <image name="shabon" width="30" height="30"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="cO4-bI-Zld"/>
+        <segue reference="HIM-L7-JbM"/>
     </inferredMetricsTieBreakers>
 </document>
