--- a/Heart-up/Base.lproj/Main.storyboard
+++ b/Heart-up/Base.lproj/Main.storyboard
@@ -195,7 +195,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qsm-AQ-XEm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2780" y="1738"/>
+            <point key="canvasLocation" x="3385" y="1897"/>
         </scene>
         <!--My Shabon Detail View Controller-->
         <scene sceneID="8j9-6K-Bsa">
@@ -230,6 +230,41 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HtW-W0-JhW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3718" y="1182"/>
+        </scene>
+        <!--My Shabon List Collection View Controller-->
+        <scene sceneID="RFb-cL-BfW">
+            <objects>
+                <collectionViewController id="BV3-F6-kzq" customClass="MyShabonListCollectionViewController" customModule="Heart_up" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="tjQ-vp-E8q">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="2xR-4L-LHf">
+                            <size key="itemSize" width="50" height="50"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gk3-Ld-kwo">
+                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </view>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="BV3-F6-kzq" id="e0u-qa-I8V"/>
+                            <outlet property="delegate" destination="BV3-F6-kzq" id="Qc3-tM-CDh"/>
+                        </connections>
+                    </collectionView>
+                    <navigationItem key="navigationItem" id="hSW-mE-3qZ"/>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="m3L-xS-vhN" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2622" y="1814"/>
         </scene>
         <!--User Info View Controller-->
         <scene sceneID="9Dn-29-8ex">
@@ -714,7 +749,7 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="1a5-qc-gGk" kind="relationship" relationship="rootViewController" id="hCJ-uE-ro5"/>
+                        <segue destination="BV3-F6-kzq" kind="relationship" relationship="rootViewController" id="YWC-f3-92o"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="12D-6y-Int" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -768,6 +803,6 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="Ubo-jr-8fC"/>
-        <segue reference="HIM-L7-JbM"/>
+        <segue reference="v7M-zm-1PM"/>
     </inferredMetricsTieBreakers>
 </document>
