--- a/Heart-up/Base.lproj/Main.storyboard
+++ b/Heart-up/Base.lproj/Main.storyboard
@@ -231,7 +231,7 @@
             </objects>
             <point key="canvasLocation" x="3718" y="1182"/>
         </scene>
-        <!--My Shabon List Collection View Controller-->
+        <!--my shabon-->
         <scene sceneID="RFb-cL-BfW">
             <objects>
                 <collectionViewController id="BV3-F6-kzq" customClass="MyShabonListCollectionViewController" customModule="Heart_up" customModuleProvider="target" sceneMemberID="viewController">
@@ -241,13 +241,13 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="2xR-4L-LHf">
                             <size key="itemSize" width="90" height="90"/>
-                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="headerReferenceSize" width="50" height="50"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gk3-Ld-kwo" customClass="MyShabonListCell" customModule="Heart_up" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.0" width="90" height="90"/>
+                                <rect key="frame" x="0.0" y="50" width="90" height="90"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
                                     <rect key="frame" x="0.0" y="0.0" width="90" height="90"/>
@@ -255,12 +255,19 @@
                                 </view>
                             </collectionViewCell>
                         </cells>
+                        <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="MyShabonListReusableView" id="1IK-GE-V64" customClass="MyShabonListReusableView" customModule="Heart_up" customModuleProvider="target">
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        </collectionReusableView>
                         <connections>
                             <outlet property="dataSource" destination="BV3-F6-kzq" id="e0u-qa-I8V"/>
                             <outlet property="delegate" destination="BV3-F6-kzq" id="Qc3-tM-CDh"/>
                         </connections>
                     </collectionView>
-                    <navigationItem key="navigationItem" id="hSW-mE-3qZ"/>
+                    <navigationItem key="navigationItem" title="my shabon" id="hSW-mE-3qZ"/>
+                    <connections>
+                        <segue destination="9Ng-XU-Eez" kind="push" id="XD8-mn-N8Z"/>
+                    </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="m3L-xS-vhN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -360,7 +367,7 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="3781.5999999999999" y="2306.8965517241381"/>
+            <point key="canvasLocation" x="4393" y="2309"/>
         </scene>
         <!--コメント履歴-->
         <scene sceneID="L1a-aZ-6mv">
@@ -803,6 +810,6 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="E37-BI-QzO"/>
-        <segue reference="cO4-bI-Zld"/>
+        <segue reference="XD8-mn-N8Z"/>
     </inferredMetricsTieBreakers>
 </document>
