--- a/Heart-up/MyShabonList/MyShabonListCell.xib
+++ b/Heart-up/MyShabonList/MyShabonListCell.xib
@@ -20,7 +20,7 @@
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D9F-tW-cmy">
-                        <rect key="frame" x="10" y="10" width="120" height="120"/>
+                        <rect key="frame" x="20" y="20" width="100" height="100"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -28,10 +28,10 @@
                 </subviews>
             </view>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="D9F-tW-cmy" secondAttribute="trailing" constant="10" id="3nT-A1-8yI"/>
-                <constraint firstItem="D9F-tW-cmy" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="10" id="Hcl-nN-O27"/>
-                <constraint firstItem="D9F-tW-cmy" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="oNZ-UE-zhw"/>
-                <constraint firstAttribute="bottom" secondItem="D9F-tW-cmy" secondAttribute="bottom" constant="10" id="zVx-DW-sib"/>
+                <constraint firstItem="D9F-tW-cmy" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="20" id="Ij4-Zf-LIp"/>
+                <constraint firstAttribute="bottom" secondItem="D9F-tW-cmy" secondAttribute="bottom" constant="20" id="Ulc-IK-uFf"/>
+                <constraint firstItem="D9F-tW-cmy" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="20" id="cN8-Eu-3Ne"/>
+                <constraint firstAttribute="trailing" secondItem="D9F-tW-cmy" secondAttribute="trailing" constant="20" id="cPd-sS-uBE"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <size key="customSize" width="90" height="90"/>
