myShabonにnewバッジ

--- a/Heart-up/Base.lproj/Main.storyboard
+++ b/Heart-up/Base.lproj/Main.storyboard
@@ -810,6 +810,6 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="E37-BI-QzO"/>
-        <segue reference="XD8-mn-N8Z"/>
+        <segue reference="v7M-zm-1PM"/>
     </inferredMetricsTieBreakers>
 </document>
