--- a/Heart-up/MyShabonList/MyShabonListCell.xib
+++ b/Heart-up/MyShabonList/MyShabonListCell.xib
@@ -19,23 +19,42 @@
                 <rect key="frame" x="0.0" y="0.0" width="140" height="140"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zth-hc-fkK">
+                        <rect key="frame" x="0.0" y="0.0" width="140" height="140"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </view>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="IdV-hH-m2H">
+                        <rect key="frame" x="104" y="0.0" width="36" height="36"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D9F-tW-cmy">
                         <rect key="frame" x="20" y="20" width="100" height="100"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ee1-IK-EaK">
+                        <rect key="frame" x="0.0" y="0.0" width="40" height="26"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    </imageView>
                 </subviews>
             </view>
             <constraints>
+                <constraint firstItem="zth-hc-fkK" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="GGk-Xm-esN"/>
                 <constraint firstItem="D9F-tW-cmy" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="20" id="Ij4-Zf-LIp"/>
                 <constraint firstAttribute="bottom" secondItem="D9F-tW-cmy" secondAttribute="bottom" constant="20" id="Ulc-IK-uFf"/>
                 <constraint firstItem="D9F-tW-cmy" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="20" id="cN8-Eu-3Ne"/>
                 <constraint firstAttribute="trailing" secondItem="D9F-tW-cmy" secondAttribute="trailing" constant="20" id="cPd-sS-uBE"/>
+                <constraint firstAttribute="bottom" secondItem="zth-hc-fkK" secondAttribute="bottom" id="mM5-vm-3Q4"/>
+                <constraint firstAttribute="trailing" secondItem="zth-hc-fkK" secondAttribute="trailing" id="sgO-bT-z6e"/>
+                <constraint firstItem="zth-hc-fkK" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="wj9-kP-NB9"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <size key="customSize" width="90" height="90"/>
             <connections>
+                <outlet property="myShabonCount" destination="IdV-hH-m2H" id="SYb-yP-lwr"/>
+                <outlet property="newNayami" destination="ee1-IK-EaK" id="2cU-9s-4m6"/>
+                <outlet property="shabonBackGround" destination="zth-hc-fkK" id="73H-El-AHI"/>
                 <outlet property="shabonTitle" destination="D9F-tW-cmy" id="aqr-qz-bAC"/>
             </connections>
             <point key="canvasLocation" x="90" y="101"/>
