--- a/Heart-up/MyShabonList/MyShabonListCell.xib
+++ b/Heart-up/MyShabonList/MyShabonListCell.xib
@@ -23,10 +23,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="140" height="140"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </view>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="IdV-hH-m2H">
-                        <rect key="frame" x="104" y="0.0" width="36" height="36"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D9F-tW-cmy">
                         <rect key="frame" x="20" y="20" width="100" height="100"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -35,6 +31,10 @@
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ee1-IK-EaK">
                         <rect key="frame" x="0.0" y="0.0" width="40" height="26"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    </imageView>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tAf-gM-xg8">
+                        <rect key="frame" x="78" y="0.0" width="30" height="30"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     </imageView>
                 </subviews>
@@ -52,7 +52,7 @@
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <size key="customSize" width="90" height="90"/>
             <connections>
-                <outlet property="myShabonCount" destination="IdV-hH-m2H" id="SYb-yP-lwr"/>
+                <outlet property="nayamiCount" destination="tAf-gM-xg8" id="LtS-f2-iVt"/>
                 <outlet property="newNayami" destination="ee1-IK-EaK" id="2cU-9s-4m6"/>
                 <outlet property="shabonBackGround" destination="zth-hc-fkK" id="73H-El-AHI"/>
                 <outlet property="shabonTitle" destination="D9F-tW-cmy" id="aqr-qz-bAC"/>
