アラートをスルーしてもnewが消えるバグを消す！

--- a/Heart-up/Base.lproj/Main.storyboard
+++ b/Heart-up/Base.lproj/Main.storyboard
@@ -809,7 +809,7 @@
         <image name="shabon" width="30" height="30"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="E37-BI-QzO"/>
-        <segue reference="v7M-zm-1PM"/>
+        <segue reference="Ubo-jr-8fC"/>
+        <segue reference="HIM-L7-JbM"/>
     </inferredMetricsTieBreakers>
 </document>
