--- a/ShabonContentsTableViewCell.xib
+++ b/ShabonContentsTableViewCell.xib
@@ -12,22 +12,22 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ShabonContentsCell" rowHeight="68" id="KGk-i7-Jjw" customClass="ShabonContentsTableViewCell" customModule="Heart_up" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="411" height="68"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ShabonContentsCell" rowHeight="108" id="KGk-i7-Jjw" customClass="ShabonContentsTableViewCell" customModule="Heart_up" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="100"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="411" height="67.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="99.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dkO-r8-2pF">
-                        <rect key="frame" x="66" y="0.0" width="345" height="68"/>
+                        <rect key="frame" x="88" y="24" width="224" height="54"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wek-dV-XRV">
-                        <rect key="frame" x="0.0" y="0.0" width="68" height="68"/>
+                        <rect key="frame" x="0.0" y="24" width="50" height="50"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     </imageView>
                 </subviews>
@@ -35,8 +35,9 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="uiLabel" destination="dkO-r8-2pF" id="9dj-Yn-ftz"/>
+                <outlet property="userProfile" destination="wek-dV-XRV" id="BrZ-tU-A0i"/>
             </connections>
-            <point key="canvasLocation" x="430.5" y="93"/>
+            <point key="canvasLocation" x="403" y="160"/>
         </tableViewCell>
     </objects>
 </document>
